k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-deployment
  labels:
    app: nest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest
  template:
    metadata:
      labels:
        app: nest
    spec:
      containers:
        - name: nest-container
          image: ammaralshari/streammix-backend
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nest-service
spec:
  selector:
    app: nest
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
