k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
spec:
  rules:
    - host: streammix.com
      http:
        paths:
          - path: /api # ← specific first
            pathType: Prefix
            backend:
              service:
                name: nest-service
                port:
                  number: 3000
          - path: / # ← general last
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
